cslc/test/csl/field_invalid/field_invalid6.csl
//Petronela
csl_enum e {
  RD,
  WR,
  EN
};
csl_field f{  
  f(){
  set_enum(e);
  set_range(9,3);
  set_upper_index(4);//error 
  }
};

